# epos_fiscal

./: .env.example  .gitignore  CLAUDE.md  README.md  clean-prikhody-MAY-2026.xlsx  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: release.yml
docs/: RELEASE.md  ui-conventions.md
docs/external-apis/: universal-communicator.md
docs/plans/: multi-shop-inventory.md  ux-redesign.md
scripts/: setup-windows.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_logs.sql  003_inventory_sync.sql
src-tauri/src/: lib.rs  main.rs  printer.rs
src/components/: AdminUnlockModal.tsx  AppGate.tsx  DevMarker.tsx  ExcelImportDialog.tsx  Layout.tsx  SystemStatusPanel.tsx  TestModeBanner.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  DataTable.tsx  EmptyState.tsx  Input.tsx  Label.tsx  Modal.tsx  PageHeader.tsx  Select.tsx  StatusBadge.tsx  Toaster.tsx  index.ts
src/lib/: admin-pin.ts  cn.ts  dev-mode.ts  format.ts  log.ts  poller-runtime.ts  system-status.ts  updater.ts
src/lib/db/: client.ts  esf-items.ts  fiscal-receipts.ts  index.ts  matches.ts  ms-receipts.ts  settings.ts  types.ts
src/lib/epos/: client.ts  fiscalize.ts  index.ts  jsonrpc-client.ts  types.ts
src/lib/esf/: excel.ts  import.ts  index.ts  types.ts
src/lib/inventory/: index.ts  login.ts  migrate.ts  pending-confirms.ts  retry.ts  runtime.ts  server-client.ts  sse.ts  sync.ts  types.ts
src/lib/matcher/: extract.ts  index.ts  strategies.ts  types.ts
src/lib/moysklad/: client.ts  index.ts  poller.ts  shift-runtime.ts  types.ts
src/lib/printer/: index.ts
src/routes/: Catalog.tsx  Dashboard.tsx  History.tsx  Login.tsx  Logs.tsx  Receipt.tsx  Settings.tsx
