[package]
name = "epos-fiscal"
version = "0.1.0"
description = "EPOS Fiscal — fiscalization helper for Uzbekistan"
authors = ["epos_fiscal"]
edition = "2021"

# https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "epos_fiscal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
