[package]
name = "epos-fiscal"
version = "0.1.0"
description = "EPOS Fiscal — fiscalization helper for Uzbekistan"
authors = ["epos_fiscal"]
edition = "2021"

# https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "epos_fiscal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = { version = "2", features = ["gzip"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Печать чека через системный print spooler (Windows/macOS/Linux).
# Используется для отправки сырых ESC/POS байтов на термопринтер,
# зарегистрированный в ОС (Xprinter XP-80 и совместимые 80мм USB).
printers = "2"
# Перекодировка строк UTF-8 → WCP1251 для печати кириллицы на термопринтере.
# Xprinter XP-80 поддерживает codepage 46 (WCP1251) — самая удобная
# для смеси русских и латинских названий товаров.
encoding_rs = "0.8"

[profile.dev]
incremental = true

[profile.release]
# codegen-units = 16 (default) + lto = "thin": быстрая компиляция в CI,
# при этом бинарь почти такой же по размеру и скорости как при full LTO.
codegen-units = 16
lto = "thin"
opt-level = 3
panic = "abort"
strip = true
